This is with gui

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="index.js"></script>
+        
+        <link rel="stylesheet" href="index.css">
     </head>
 <body>
+    <div class="result">
+        Score: 
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+    </div>
+    <div class="compickdiv">
 
+    </div>
+<div class="main">
+<button id="rock">ROCK</button>
+<button id="paper">PAPER</button>
+<button id="scissors">SCISSORS</button>
+</div>
+
+<script src="index.js"></script>
 </body>
 </html> 
